# cookiecutter-python-package

./: .gitignore  README.md  cookiecutter.json  scaffold.sh  tasks.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .coveragerc  .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  Dockerfile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
{{cookiecutter.project_name}}/.github/workflows/: publish-docker.yml  release.yml  test.yml
{{cookiecutter.project_name}}/docker/: build
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: fib.py
{{cookiecutter.project_name}}/tests/: test_fib.py  test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  fib.py  main.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .env  .gitignore  .gitlab-ci.yml  Pipfile  README.md  pytest.ini  setup.py  tasks.py
{{cookiecutter.project_slug}}/tests/: test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
